--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "gulp-cli",
-  "version": "1.3.0",
-  "description": "Command line interface for gulp",
-  "author": "Gulp Team <team@gulpjs.com> (http://gulpjs.com/)",
-  "contributors": [],
-  "homepage": "http://gulpjs.com",
-  "repository": "gulpjs/gulp-cli",
+  "name": "better-gulp-cli",
+  "version": "0.0.0",
+  "description": "Better command line interface for gulp",
+  "repository": "ratson/better-gulp-cli",
   "license": "MIT",
   "man": "gulp.1",
   "engines": {
