--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash.sortby": "^4.5.0",
     "matchdep": "^1.0.0",
     "mute-stdout": "^1.0.0",
+    "pkg-conf": "^2.0.0",
     "pretty-hrtime": "^1.0.0",
     "semver-greatest-satisfied-range": "^1.0.0",
     "tildify": "^1.0.0",
