--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mute-stdout": "^1.0.0",
     "pkg-conf": "^2.0.0",
     "pretty-hrtime": "^1.0.0",
+    "read-pkg-up": "^2.0.0",
     "semver-greatest-satisfied-range": "^1.0.0",
     "tildify": "^1.0.0",
     "update-notifier": "^2.1.0",
